<resources>
    <string name="app_name">SampleKotlinApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_service">How was the Service?</string>
    <string name="amazing">Amazing</string>
    <string name="good">Good</string>
    <string name="ok">Ok</string>
    <string name="round_up_tip">Round Up Tip</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>