<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/icon_cost_of_service"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_call_made_24"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cost_of_service">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewCost"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/feedbackId"
        app:layout_constraintTop_toTopOf="@+id/feedbackId"
        android:src="@drawable/ic_baseline_room_service_24"/>

    <TextView
        android:id="@+id/feedbackId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_service"
        android:layout_marginTop="8dp"
        style="@style/Widget.TipTime.TextView"
        app:layout_constraintStart_toStartOf="@+id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"/>

    <RadioGroup
        android:id="@+id/feedBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/twentyPercentage"
        app:layout_constraintStart_toStartOf="@id/feedbackId"
        app:layout_constraintTop_toBottomOf="@+id/feedbackId">

        <RadioButton
            android:id="@+id/twentyPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_store_24"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@+id/roundUpTipText"
        app:layout_constraintBottom_toBottomOf="@+id/roundUpTipText"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/roundUpTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/feedBackButton"
        app:layout_constraintTop_toBottomOf="@+id/feedBackButton"
        android:text="@string/round_up_tip"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/roundUpTipSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.CompoundButton.Switch"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedBackButton" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        style="@style/Widget.TipTime.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/roundUpTipText"
        app:layout_constraintTop_toBottomOf="@+id/roundUpTipSwitch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>